Bug 664692. Rename nsIWebSocket to nsIMozWebSocket. r=sicking a=asa

--HG--
rename : content/base/public/nsIWebSocket.idl => content/base/public/nsIMozWebSocket.idl